# chaud

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml
chaud/: Cargo.toml  build.rs
chaud-cli/: Cargo.toml  README.md
chaud-cli/src/: lib.rs
chaud-def/: Cargo.toml
chaud-def/src/: lib.rs
chaud-hot/: Cargo.toml  README.md  build.rs
chaud-hot/src/: cycle.rs  dylib.rs  lib.rs
chaud-hot/src/cargo/: builder.rs  metadata.rs  mod.rs  run.rs
chaud-hot/src/func/: atomic.rs  def.rs  mod.rs  ptr.rs  storage.rs
chaud-hot/src/hot/: mod.rs  registry.rs
chaud-hot/src/hot/cargo/: build_.rs  metadata.rs  mod.rs
chaud-hot/src/hot/dylib/: lib.rs  mod.rs
chaud-hot/src/hot/handle/: erased.rs  fn_ptr.rs  mod.rs  typed.rs
chaud-hot/src/hot/util/: mod.rs  topo.rs
chaud-hot/src/hot/workspace/: worker.rs
chaud-hot/src/hot/workspace/graph/: data.rs  def.rs  env.rs  flags.rs  index.rs  mod.rs
chaud-hot/src/hot/workspace/symbols/: mod.rs  tracked.rs
chaud-hot/src/util/: assert.rs  etx.rs  into.rs  latest.rs  minilog.rs  mod.rs  relaxed.rs
chaud-hot/src/workspace/: mod.rs  patch.rs  watcher.rs  worker.rs
chaud-hot/src/workspace/graph/: def.rs  env.rs  flags.rs  index.rs  krate.rs  mod.rs
chaud-macros/: Cargo.toml  README.md
chaud-macros/src/: err.rs  expect.rs  factory.rs  input.rs  lib.rs  output.rs  parse.rs
chaud-macros/src/output/: hot.rs  mod.rs  persist.rs
chaud/src/: create.rs  cycle.rs  func.rs  lib.rs  macros.rs
chaud/src/hot/: handles.rs  mod.rs
chaud/src/hot/cargo/: metadata.rs
chaud/src/hot/dylib/: lib.rs  link.rs  mod.rs  object.rs  sym.rs
chaud/src/hot/handle/: atomic.rs  erased.rs  fn_ptr.rs  mod.rs  tests.rs  typed.rs
chaud/src/hot/util/: assert.rs  channel.rs  command.rs  etx.rs  minilog.rs  miri.rs  mod.rs  poison.rs  relaxed.rs  unpoison.rs
chaud/src/hot/workspace/: index.rs  mod.rs  patch.rs  watcher.rs  worker.rs
chaud/src/hot/workspace/graph/: data.rs  def.rs  dylib.rs  env.rs  flags.rs  info.rs  mod.rs  paths.rs
chaud/src/hot/workspace/symbols/: def.rs  dylib.rs  tracked.rs
chaud/tests/: demo.rs  expansion.rs  selftest.rs
demo/: Cargo.toml  README.md  expanded_cold.rs  expanded_hot.rs  expanded_reload.rs
demo/cold/: Cargo.toml
demo/cold/src/: lib.rs
demo/expand/: Cargo.toml
demo/expand/src/: lib.rs
demo/leaf/src/: lib.rs
demo/mid/: Cargo.toml
demo/mid/src/: lib.rs
demo/root/: Cargo.toml
demo/root/src/: main.rs
demo/selftest/: Cargo.toml
demo/selftest/src/: crashlog.rs  lib.rs
