[workspace]
resolver = "3"
members = ["chaud", "chaud-hot"]

[workspace.package]
license = "MIT OR Apache-2.0"
repository = "https://github.com/TimNN/chaud"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "forbid"

[workspace.lints.clippy]
multiple_unsafe_ops_per_block = "warn"
self_named_module_files = "warn"
undocumented_unsafe_blocks = "warn"
unused_trait_names = "warn"

# See CONTRIBUTING.md#panics.
expect_used = "warn"
indexing_slicing = "warn"
panic = "warn"
unimplemented = "warn"
unreachable = "warn"
unwrap_used = "forbid"

# FIXME: re-enable
# cargo = { level = "warn", priority = -1 }

pedantic = { level = "warn", priority = -1 }
bool_to_int_with_if = "allow"
match_bool = "allow"
match_same_arms = "allow"
needless_raw_string_hashes = "allow"
redundant_closure_for_method_calls = "allow"
single_match_else = "allow"
