[package]
name = "chaud-cli"
version = "0.1.0"

readme = "README.md"
license.workspace = true
repository.workspace = true

description = '''
Utilities for working with Chaud, a hot-reloading library for Cargo workspaces.
'''
categories = ["development-tools", "development-tools::cargo-plugins"]
keywords = ["chaud", "hot-reloading"]

edition = "2024"
rust-version = "1.86"

[dependencies]
anyhow = "1.0.98"
lexopt = "0.3.1"
shlex = "1.3.0"

[lints]
workspace = true

[dev-dependencies]
pretty_assertions = "1.4.1"
