[package]
name = "chaud-hot"
version = "0.1.0"
edition = "2024"

readme = "README.md"
license.workspace = true
repository.workspace = true

[features]

# FIXME: Document.
silence-log-level-warning = []

[dependencies]
aho-corasick = "1.1.3"
anyhow = "1.0.98"
camino = "1.1.9"
foldhash = "0.1.5"
libloading = "0.8.6"
log = "0.4.27"
notify = "8.0.0"
parking_lot = "0.12.3"
rustc-demangle = "0.1.24"
toml_edit = "0.22.24"
topological-sort = "0.2.2"

[dependencies.ctor]
version = "0.4.2"
default-features = false

[dependencies.hashbrown]
version = "0.15.2"
default-features = false
features = ["default-hasher", "inline-more"]

[dependencies.jiff]
version = "0.2.10"
default-features = false
features = ["std"]

[dependencies.nanoserde]
version = "0.2.1"
default-features = false
features = ["json"]

[dev-dependencies]
pretty_assertions = "1.4.1"

[lints]
workspace = true

[package.metadata.docs.rs]
# No need to build multiple targets, the docs are all the same.
targets = []
cargo-args = ["--document-private-items"]
