[package]
name = "chaud-macros"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[features]
unsafe-hot-reload = []

[lints]
workspace = true

[package.metadata.docs.rs]
# No need to build multiple targets, the docs are all the same.
targets = []
