[package]
name = "chaud-macros"
version = "0.1.0"

readme = "README.md"
license.workspace = true
repository.workspace = true

description = "Implementation detail of Chaud."

edition = "2024"
rust-version = "1.86"

[lib]
proc-macro = true

[features]
unsafe-hot-reload = []

[lints]
workspace = true

[package.metadata.docs.rs]
# No need to build multiple targets, the docs are all the same.
targets = []
