[package]
name = "chaud"
version = "0.1.0"

readme = "README.md"
license.workspace = true
repository.workspace = true

description = '''
A hot-reloading library for Cargo workspaces designed for ease of use.
'''
categories = ["hot-reloading"]
keywords = ["development-tools"]

edition = "2024"
rust-version = "1.86"

[features]

# Do not print a warning to stderr if logging is disabled for Chaud.
#
# See https://docs.rs/chaud#logging
silence-log-level-warning = []

# Enable hot-reloading functionality.
#
# SAFETY: See https://docs.rs/chaud#safety
unsafe-hot-reload = ["dep:chaud-hot", "chaud-macros/unsafe-hot-reload"]

[dependencies.chaud-macros]
path = "../chaud-macros"

[dependencies.chaud-hot]
path = "../chaud-hot"
optional = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
# No need to build multiple targets, the docs are all the same.
targets = []
