[package]
name = "chaud"
version = "0.1.0"

readme = "README.md"
license.workspace = true
repository.workspace = true

description = '''
A hot-reloading library for Cargo workspaces designed for ease of use. Unix only.
'''
categories = ["development-tools"]
keywords = ["chaud", "hot-reloading"]

edition = "2024"
rust-version = "1.86"

[features]

# Do not print a warning to stderr if logging is disabled for Chaud.
#
# See https://docs.rs/chaud#logging
silence-log-level-warning = ["chaud-hot?/silence-log-level-warning"]

# Enable hot-reloading functionality.
#
# SAFETY: See https://docs.rs/chaud#safety
unsafe-hot-reload = ["dep:chaud-hot", "chaud-macros/unsafe-hot-reload"]

[dependencies.chaud-macros]
path = "../chaud-macros"
version = "0.1"

[dependencies.chaud-hot]
path = "../chaud-hot"
version = "0.1"
optional = true

# This ensures that `chaud-hot` (and all of its dependencies) are always added
# to `Cargo.lock`. Otherwise, if `unsafe-hot-reload` is only ever used via the
# `--features=chaud/unsafe-hot-reload` command line flag, Cargo would perform
# depenency version selection (including checking online) on every build
# including that flag.
[target.'cfg(any())'.dependencies.chaud-hot]
path = "../chaud-hot"
version = "0.1"

[[test]]
name = "demo"
harness = false

[lints]
workspace = true

[dev-dependencies]
expect-test = "1.5.1"
fs_extra = "1.3.0"

[package.metadata.docs.rs]
# No need to build multiple targets, the docs are all the same.
targets = []
